# gitlab-analyzer

./: .gitignore  CMakeLists.txt  Makefile  initial_build.sh  rebuild.sh  rebuild_and_run.sh  source.sh
apps/: full_match_test.cc  testGraphhh.cc
client/src/components/: Header.js  UserMap.css
core/: DataConverter.cc  DataConverter.hh  DataGraph.cc  DataGraph.hh  Graph.hh  PO.cc  PO.hh  PatternGenerator.cc  PatternGenerator.hh  PatternMatching.hh  doctest.hh
data/: TestCase1.txt  TestCase2.txt  TestCase3.txt  TestCase4.txt
